
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int saved_r0; int saved_r2; } ;
typedef TYPE_1__ PIA ;


 int w0 (int) ;
 int w2 (int) ;

__attribute__((used)) static void on20_disconnect ( PIA *pi )

{ w2(4);w0(7);w2(4);w2(0xc);w2(4);
        w0(pi->saved_r0);
        w2(pi->saved_r2);
}
